<resources>
    <string name="app_name">rELATIVElAYOUT_aPPLICATION</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="violet">Violet</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
</resources>
