<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:background="@color/red"
        android:padding="@dimen/element_padding"
        android:id="@+id/textView1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:background="@color/orange"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:id="@+id/textView2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:background="@color/yellow"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:id="@+id/textView3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:background="@color/green"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:id="@+id/textView4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:background="@color/blue"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:id="@+id/textView5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:background="@color/indigo"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView5"
        android:layout_toLeftOf="@+id/textView5"
        android:id="@+id/textView6"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/violet"
        android:background="@color/violet"
        android:padding="@dimen/element_padding"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:id="@+id/textView7"/>
</RelativeLayout>